app/styles/_data-connect.scss
#my-connection-panel #add-datasource-form {
	background-color: #f4f4f4;
	color: #444;
	border: 1px solid #ddd;
	padding: 12px;
	position: absolute;
	right: 14px;
	z-index: 10;
	width: 420px;
}

#my-connection-panel .buttonPanel {
	margin-top: 20px;
	margin-right: 5px;
}

#my-connection-panel > h1 {
	display: inline-block;
	vertical-align: sub;
}

#my-connection-panel #refreshButton {
	margin-left: 8px;
}

/* overwrite admin.css */
#my-connection-panel .alert-error, #add-connection-modal .alert-error {
	background-color: #f2dede !important;
	border-color: #ebccd1;
	color: #a94442 !important;
}
#my-connection-panel .alert-success, #add-connection-modal .alert-success {
	background-color: #dff0d8 !important;
	border-color: #d6e9c6;
	color: #3c763d !important;
}
#my-connection-panel .alert-link {
	cursor: pointer;
}

#datasource-table {
	padding: 0 20px;
}

#datasource-table .col {
	word-wrap: break-word;
	padding: 0;
}
#datasource-table .badge {
	vertical-align: text-bottom;
	font-size: 10px;
}
#datasource-table .col-source-url {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	padding-right: 20px;
}

#datasource-table .col-source-url:hover {
	white-space: normal;
}
#datasource-table > li {
	margin-bottom: 8px;
	border-bottom: 1px solid #E1E8ED;
}
#datasource-table > li > .row {
	padding: 20px 10px;
	font-size: 15px;
	cursor: pointer;
	border-top-left-radius: 6px;
}

#datasource-table li .detail {
	display: none;
	margin-right: -15px;
	padding: 10px;
}

#datasource-table li .detail .row {
	padding: 5px 0 5px 12px;
}

#datasource-table li.showing-detail .detail {
	display: block;
}


#datasource-table .title-row {
	font-weight: bold;
	cursor: initial;
}

#datasource-table .content-row {
	background-color: white;
}
#datasource-table a:hover {
	text-decoration: underline;
}

#confirm-delete-modal-dialog {
	width: 350px;
}

#confirm-delete-modal-dialog .modal-header {
	border-bottom: none;
}



#add-connection-form h2 code {
	cursor: pointer;
}

#add-connection-form h2 i {
	font-size: 16px;
	vertical-align: middle;
	color: gray;
	cursor: pointer;
}

#datasource-table input:disabled {
	width: inherit;
	background-color: inherit;
	border: none;
	cursor: text;
	padding-left: 4px;
}

#datasource-table select:disabled {
	background-color: inherit;
	-webkit-appearance: inherit;
	border: none;
	cursor: text;
}

@media (max-width: 990px) {
	/* force newline */
	#datasource-table .col {
		width: 100%;
	}
}
#message-view-modal {
	overflow-y: hidden;
}
#message-view-modal .modal-dialog {
	max-height: 98%;
	margin-top: 10px;
}
#message-view-modal .modal-content {
	max-height: 98%;
}
#message-view-modal .modal-body {
	max-height: calc(100% - 73px);
	overflow-y: auto;
	padding: 5px 15px;
}
#message-view-modal .single-tweet {
	position: relative;
	transform: none;
	top: 0;
	left: 0;
	width: 100%;
}
#message-view-modal .modal-header{
	height: 73px;
}
#add-connection-modal {
	overflow-y: hidden;
}
#add-connection-modal-dialog {
	width: 100%;
	height: 98%;
	margin-top: 10px;
	padding: 0px 10px 0 10px;
}
#add-connection-modal-content {
	width: 100%;
	height: 98%;
}
#add-connection-modal .modal-body {
	max-height: calc(100% - 140px);
	overflow-y: auto;
}
#add-connection-modal .modal-body .tabs-list {
	position: fixed;
}
#source-info-form input[name='sourceUrl']{
	display: inline-block;
}
#source-info-form i.validate-icon {
	font-size: 20px;
	margin-left: 20px;
}
#source-info-form .fa-spinner {
	color: rgb(126, 23, 23);
}
#source-info-form .fa-exclamation-circle {
	color: rgb(223, 103, 103);
}
#source-info-form .fa-check {
	color: green;
}
#map-view-modal-dialog {
	width: 100%;
	height: 98%;
	margin-top: 10px;
	padding: 0px 10px 0 10px;
}

#map-view-modal-dialog .modal-header {
	height: 73px;
}
#map-view-modal-dialog .modal-content {
	height: 98%;
	overflow: hidden;
}
#map-view-modal-dialog .modal-body {
	height: calc(100% - 73px);
}
#single-data-map {
	height: 100%;
}
#single-data-map .single-tweet .user-data-wrapper .name, 
#single-data-map .single-tweet .user-data-wrapper .screen-name {
	font-size: 1em;
}

.source-format-item {
	box-sizing: content-box;
	margin-bottom: 20px;
	border: 2px solid #e1e8ed;
	margin-top: 20px;
	background: white;
	border-radius: 10px;
	padding: 28px 10px 15px 10px;
	height: 100px;
}
.source-format-item.nologo h4 {
	position: inherit;
	margin: auto;
	text-align: center;
	color: #55acee;
	font-size: 40px;
	transform: inherit;
}
.source-format-item:hover, .source-format-item.selected {
	border : 2px solid #55acee;
	cursor: pointer;
}
.source-format-item:hover {
	background: #f7f7f7;
}
.source-format-item h4 {
	position: absolute;
	top: 16px;
	transform: translateX(-50%);
	left: 50%;
}
.source-format-item h2 span {
	color: black;
	letter-spacing: -1px;
	padding: 10px; 
} 
.source-format-item img {
	opacity: 0.8;
	position: relative;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.source-format-item:after {
	content: "";
	background-repeat: no-repeat;
	opacity: 0.5;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	position: absolute;
	z-index: -1;
}

#toggle-show-data {
	vertical-align: sub;
	font-size: 23px;
	color: rgb(76, 128, 158);
	margin-left: 6px;
}
#source-info-form {
	font-size: 16px;
}

#source-info-form input[type="text"], #source-info-form input[type="url"] {
	width: 50%;
}

#mapping-rule-tab .field-label {
	margin-bottom: 10px;
}
#mapping-rule-tab .loklak-field, #mapping-rule-tab .custom-field {
	display: inline-block;
}

#mapping-rule-tab .loklak-field {
	font-weight: bold;
}

#mapping-rule-tab hr {
	margin-top: 0;
}

